# bigbot

./: .gitignore
bigbot/: CMakeLists.txt  package.xml
bigbot_description/: CMakeLists.txt  package.xml
bigbot_description/launch/: bigbotdescript.launch.py  bigbotdescript2.launch.py  description.launch.py  description.xml  display.launch.py  turtlebot3_state_publisher.launch.py
bigbot_description/rviz/: odom.rviz  urdf.rviz
bigbot_description/urdf/: bigbot.xacro  bigbot2.xacro  bigbot3.xacro  bigbot3a.xacro  bigbot4.xacro  bigbot5.xacro  bigbot6.xacro  readme  readme.md  robot2.sdf  robot2.urdf
bigbot_gazebo/: CMakeLists.txt  package.xml
bigbot_gazebo/launch/: bigbot_lroom.launch.py  display.launch.py  dollygazebo.launch.py  gazebo.launch.py  gazebo.xml
bigbot_gazebo/models/livingroom/: model.config  model.sdf
bigbot_gazebo/models/livingroom/a/: model.config  model.sdf
bigbot_gazebo/src/: dummy.cpp
bigbot_gazebo/worlds/: livingroom.world  wlroom.world
bigbot_navigation2/: CMakeLists.txt  package.xml
