<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigbot</name>
  <version>0.0.0</version>
  <description>ROS2 Package for bigbot</description>
  <maintainer email="ekenna510@verizon.net">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bigbot_description</exec_depend>
  <exec_depend>bigbot_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
